Fix issue with big gaps being left in rows

--- a/asset/style.css
+++ b/asset/style.css
@@ -596,7 +596,6 @@ article:hover .textIcon {
 .row {
   display: flex;
   flex-direction: row;
-  flex: 1;
 }
 
 .subcolumn .article {
